--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@
 
     <!-- Helper -->
     <div id="accordion">
-        <div id="helperNoc" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
+        <div id="helperNoc" data-bs-parent="#accordion" class="collapse show" style="margin-top: 80px;">
             <div class="container-sm d-flex flex-column">
 
                 <form class="form-floating text-dark mb-2 w-75 align-self-center">
@@ -76,7 +76,7 @@
         </div>
 
         <!-- SOS TELEGRAM -->
-        <div id="sosTelegram" data-bs-parent="#accordion" class="collapse show" style="margin-top: 80px;">
+        <div id="sosTelegram" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
             <div class="container-sm p-2 bg-telegram rounded text-center w-75">
                 <h1 class="fw-bold">SOS TELEGRAM</h1>
                 <p>(Exemplo preenchido com corte de fibra, podem ser outras situações) Enviar sempre templates em todos
