--- a/index.htm
+++ b/index.htm
@@ -108,8 +108,8 @@
                         <h3 id="tituloModoDeEnvio">** Abertura **</h3>
 
                         <form class="form-floating text-dark my-1">
-                            <input type="datetime-local" name="SOSinput" id="inpDataInicio" class="form-control ">
-                            <label for="inpDataInicio">Início</label>
+                            <input type="datetime-local" name="SOSinput" id="inpDataAbertura" class="form-control ">
+                            <label for="inpDataAbertura">Abertura</label>
                         </form>
 
                         <form class="form-floating text-dark">
