--- a/index.htm
+++ b/index.htm
@@ -109,7 +109,7 @@
 
                         <form class="form-floating text-dark my-1">
                             <input type="datetime-local" name="SOSinput" id="inpDataAbertura" class="form-control ">
-                            <label for="inpDataAbertura">Abertura</label>
+                            <label for="inpDataAbertura">Data de Abertura</label>
                         </form>
 
                         <form class="form-floating text-dark">
@@ -159,7 +159,7 @@
 
                         <form class="FECHO form-floating text-dark my-1">
                             <input type="datetime-local" name="SOSinput" id="inpDataFecho" class="form-control">
-                            <label for="inpDataFecho">Fecho</label>
+                            <label for="inpDataFecho">Data de Fecho</label>
                         </form>
                     </div>
                     <div class="container-sm">
