--- a/index.htm
+++ b/index.htm
@@ -294,7 +294,7 @@
                             </tr>
                             <tr>
                                 <td rowspan="26">Level 2</td>
-                                <td rowspan="7">Zener - sectores</td>
+                                <td rowspan="8">Zener - sectores</td>
                                 <td>Palmela / Lisboa</td>
                                 <td colspan="2">928043168</td>
                             </tr>
@@ -321,6 +321,14 @@
                             <tr>
                                 <td>Évora / Beja</td>
                                 <td colspan="2">928034032</td>
+                            </tr>
+                            <tr>
+                                <td class="text-warning fw-bold">
+                                    Provisório Évora / Beja
+                                </td>
+                                <td colspan="2" class="text-warning">
+                                    Paulo Matos 928070260
+                                </td>
                             </tr>
                             <tr>
                                 <td>Alcácer / St André</td>
