--- a/index.htm
+++ b/index.htm
@@ -294,17 +294,9 @@
                             </tr>
                             <tr>
                                 <td rowspan="26">Level 2</td>
-                                <td rowspan="8">Zener - sectores</td>
+                                <td rowspan="6">Zener - sectores</td>
                                 <td>Palmela / Lisboa</td>
-                                <td colspan="2">928043168</td>
-                            </tr>
-                            <tr>
-                                <td class="text-warning fw-bold">
-                                    Provisório Palmela / Lisboa
-                                </td>
-                                <td colspan="2" class="text-warning">
-                                    Paulo Macedo 965734891
-                                </td>
+                                <td colspan="2" class="text-warning fw-bold">Provisório Paulo Macedo 965734891</td>
                             </tr>
                             <tr>
                                 <td>Caldas da Rainha</td>
@@ -320,15 +312,7 @@
                             </tr>
                             <tr>
                                 <td>Évora / Beja</td>
-                                <td colspan="2">928034032</td>
-                            </tr>
-                            <tr>
-                                <td class="text-warning fw-bold">
-                                    Provisório Évora / Beja
-                                </td>
-                                <td colspan="2" class="text-warning">
-                                    Paulo Matos 928070260
-                                </td>
+                                <td colspan="2" class="text-warning fw-bold">Provisório Paulo Matos 928070260</td>
                             </tr>
                             <tr>
                                 <td>Alcácer / St André</td>
