--- a/index.htm
+++ b/index.htm
@@ -312,7 +312,7 @@
                             </tr>
                             <tr>
                                 <td>Évora / Beja</td>
-                                <td colspan="2" class="text-warning fw-bold">Provisório Paulo Matos 928070260 ou 928056849</td>
+                                <td colspan="2" class="text-warning fw-bold">Provisório Vítor Santos (928098494)</td>
                             </tr>
                             <tr>
                                 <td>Alcácer / St André</td>
