--- a/index.htm
+++ b/index.htm
@@ -296,7 +296,7 @@
                                 <td rowspan="26">Level 2</td>
                                 <td rowspan="6">Zener - sectores</td>
                                 <td>Palmela / Lisboa</td>
-                                <td colspan="2" class="text-warning fw-bold">Provisório Paulo Macedo 965734891</td>
+                                <td colspan="2" class="text-warning fw-bold">Provisório 926511050 (Rian)</td>
                             </tr>
                             <tr>
                                 <td>Caldas da Rainha</td>
@@ -312,11 +312,11 @@
                             </tr>
                             <tr>
                                 <td>Évora / Beja</td>
-                                <td colspan="2" class="text-warning fw-bold">Provisório Vítor Santos (928098494)</td>
+                                <td colspan="2" class="text-warning fw-bold">Provisório Paulo Matos 928070260</td>
                             </tr>
                             <tr>
                                 <td>Alcácer / St André</td>
-                                <td colspan="2">928032839</td>
+                                <td colspan="2">Provisório Paulo Matos 928070260</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">SPOC - ZENER</td>
