--- a/index.htm
+++ b/index.htm
@@ -296,7 +296,7 @@
                                 <td rowspan="26">Level 2</td>
                                 <td rowspan="6">Zener - sectores</td>
                                 <td>Palmela / Lisboa</td>
-                                <td colspan="2" class="text-warning fw-bold">Provisório 926511050 (Rian)</td>
+                                <td colspan="2" class="text-warning fw-bold">Provisório Rian 926511050</td>
                             </tr>
                             <tr>
                                 <td>Caldas da Rainha</td>
