--- a/index.htm
+++ b/index.htm
@@ -69,23 +69,49 @@
                             data-bs-toggle="dropdown" aria-expanded="false">Alarmes</button>
 
                         <ul class="dropdown-menu" aria-labelledby="buttonAlarmesGroup">
-                            <li><a href="#" class="dropdown-item"> Afetação dispersa. </a></li>
-                            <li><a href="#" class="dropdown-item"> Em análise. </a></li>
+                            <li><a href="#" class="ALARMES dropdown-item"> Afetação dispersa. </a></li>
+                            <li><a href="#" class="ALARMES dropdown-item"> Em análise. </a></li>
                         </ul>
                     </div>
-
-
                 </div>
 
                 <div class="btn-group my-3 align-self-center" role="group">
-                    <button class="btn btn-primary">
-                        <input type="radio" name="empreiteira" id="inpZENER" value="ZENER" checked>
-                        <label for="inpZENER">ZENER</label>
-                    </button>
-                    <button class="btn btn-primary">
-                        <input type="radio" name="empreiteira" id="inpCME" value="CME">
-                        <label for="inpCME">CME</label>
-                    </button>
+                    <div class="btn-group" role="group">
+                        <button id="buttonSpocGroup" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"
+                            aria-expanded="false">ZENER</button>
+
+                        <ul class="dropdown-menu" aria-labelledby="buttonSpocGroup">
+                            <li class="dropdown-item">
+                                <input type="radio" name="ZONE" id="spocPalmela" value="Palmela/Lisboa" class="ZONE" checked>
+                                <label for="spocPalmela">Palmela/Lisboa</label>
+                            </li>
+                            <li class="dropdown-item">
+                                <input type="radio" name="ZONE" id="spocCaldas" value="Caldas da Rainha" class="ZONE">
+                                <label for="spocCaldas">Caldas da Rainha</label>
+                            </li>
+                            <li class="dropdown-item">
+                                <input type="radio" name="ZONE" id="spocAlgarve" value="Algarve" class="ZONE">
+                                <label for="spocAlgarve">Algarve</label>
+                            </li>
+                            <li class="dropdown-item">
+                                <input type="radio" name="ZONE" id="spocElvas" value="Elvas/Portalegre" class="ZONE">
+                                <label for="spocElvas">Elvas/Portalegre</label>
+                            </li>
+                            <li class="dropdown-item">
+                                <input type="radio" name="ZONE" id="spocEvora" value="Évora/Beja" class="ZONE">
+                                <label for="spocEvora">Évora/Beja</label>
+                            </li>
+                            <li class="dropdown-item">
+                                <input type="radio" name="ZONE" id="spocAlcacer" value="Alcácer/St André" class="ZONE">
+                                <label for="spocAlcacer">Alcácer/St André</label>
+                            </li>
+                        </ul>
+                        <button class="btn btn-primary">
+                            <input type="radio" name="company" id="inpCME" value="CME">
+                            <label for="inpCME">CME</label>
+                        </button>
+                    </div>
+
                     <div class="btn-group" role="group">
 
                         <button id="buttonSpocGroup" type="button" data-bs-toggle="dropdown"
@@ -93,13 +119,12 @@
 
                         <ul class="dropdown-menu" aria-labelledby="buttonSpocGroup">
                             <li>
-                                <a href="#" class="dropdown-item" id="spocSuccess"> </a>
+                                <a href="#" class="SPOC dropdown-item" id="spocSuccess"> </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown-item" id="spocUnsuccessful"> </a>
+                                <a href="#" class="SPOC dropdown-item" id="spocUnsuccessful"> </a>
                             </li>
                         </ul>
-
                     </div>
                 </div>
             </div>
@@ -325,12 +350,12 @@
                             <tr>
                                 <td rowspan="26">Level 2</td>
                                 <td rowspan="7">Zener - sectores</td>
-                                <td>Palmela / Lisboa</td>
+                                <td>Palmela/Lisboa</td>
                                 <td colspan="2">928043168</td>
                             </tr>
                             <tr>
                                 <td class="text-warning fw-bold">
-                                    Provisório Palmela / Lisboa
+                                    Provisório Palmela/Lisboa
                                 </td>
                                 <td colspan="2" class="text-warning">
                                     Paulo Macedo 965734891
@@ -345,15 +370,15 @@
                                 <td colspan="2">928034863</td>
                             </tr>
                             <tr>
-                                <td>Elvas / Portalegre</td>
+                                <td>Elvas/Portalegre</td>
                                 <td colspan="2">928032839</td>
                             </tr>
                             <tr>
-                                <td>Évora / Beja</td>
+                                <td>Évora/Beja</td>
                                 <td colspan="2">928034032</td>
                             </tr>
                             <tr>
-                                <td>Alcácer / St André</td>
+                                <td>Alcácer/St André</td>
                                 <td colspan="2">928032839</td>
                             </tr>
                             <tr>
