--- a/index.htm
+++ b/index.htm
@@ -82,7 +82,8 @@
 
                         <ul class="dropdown-menu" aria-labelledby="buttonSpocGroup">
                             <li class="dropdown-item">
-                                <input type="radio" name="ZONE" id="spocPalmela" value="Palmela/Lisboa" class="ZONE" checked>
+                                <input type="radio" name="ZONE" id="spocPalmela" value="Palmela/Lisboa" class="ZONE"
+                                    checked>
                                 <label for="spocPalmela">Palmela/Lisboa</label>
                             </li>
                             <li class="dropdown-item">
@@ -349,24 +350,9 @@
                             </tr>
                             <tr>
                                 <td rowspan="26">Level 2</td>
-
                                 <td rowspan="7">Zener - sectores</td>
-                                <td>Palmela/Lisboa</td>
-                                <td colspan="2">928043168</td>
-                            </tr>
-                            <tr>
-                                <td class="text-warning fw-bold">
-                                    Provisório Palmela/Lisboa
-                                </td>
-                                <td colspan="2" class="text-warning">
-                                    Paulo Macedo 965734891
-                                </td>
-                             </tr>
-
-                                <td rowspan="6">Zener - sectores</td>
                                 <td>Palmela / Lisboa</td>
                                 <td colspan="2" class="text-warning fw-bold">Provisório Vítor Santos 928098494</td>
-
                             </tr>
                             <tr>
                                 <td>Caldas da Rainha</td>
@@ -381,23 +367,12 @@
                                 <td colspan="2">928032839</td>
                             </tr>
                             <tr>
-
-                            <tr>
-                                <td>Évora/Beja</td>
-                                <td colspan="2">928034032</td>
-                            </tr>
-                            <tr>
-                                <td>Alcácer/St André</td>
-                                <td colspan="2">928032839</td>
-                            </tr>
-
-                            <tr>
                                 <td>Évora / Beja</td>
                                 <td colspan="2" class="text-warning fw-bold">Provisório Paulo Matos 928070260</td>
                             </tr>
                             <tr>
                                 <td>Alcácer / St André</td>
-                                <td colspan="2">Provisório Paulo Matos 928070260</td>
+                                <td colspan="2" class="text-warning fw-bold">Provisório Paulo Matos 928070260</td>
                             </tr>
 
                             <tr>
