--- a/index.htm
+++ b/index.htm
@@ -108,7 +108,7 @@
                             </li>
                         </ul>
                         <button class="btn btn-primary">
-                            <input type="radio" name="company" id="inpCME" value="CME">
+                            <input type="radio" name="ZONE" id="inpCME" value="CME">
                             <label for="inpCME">CME</label>
                         </button>
                     </div>
