--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,7 @@
 </head>
 
 <body class="bg-dark text-white">
+    <!-- Barra de navegação -->
     <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-primary">
         <div class="container-fluid">
 
@@ -131,7 +132,7 @@
             </div>
         </div>
 
-        <!-- SOS TELEGRAM -->
+        <!-- SOS Telegram -->
         <div id="sosTelegram" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
             <div class="container-sm p-2 bg-telegram rounded text-center w-75">
                 <h1 class="fw-bold">SOS TELEGRAM</h1>
@@ -230,6 +231,7 @@
         <div id="matrizEscalamento" data-bs-parent="#accordion" class="collapse" style="margin-top: 80px;">
             <div class="container">
                 <div class="table-responsive">
+                    <!-- Tabela de escalamento -->
                     <table class="table align-middle text-center table-bordered table-striped table-dark">
                         <thead class="align-middle">
                             <th scope="col" class="bg-secondary">FAILURE</th>
@@ -326,6 +328,7 @@
                         </tbody>
                     </table>
 
+                    <!-- Tabela de Contactos -->
                     <table class="table table-dark table-bordered table-striped text-center align-middle">
                         <thead>
                             <th colspan="5" class="bg-secondary">Escalamento interno</th>
