--- a/index.htm
+++ b/index.htm
@@ -371,7 +371,7 @@
                             </tr>
                             <tr>
                                 <td>Évora / Beja</td>
-                                <td colspan="2" class="text-warning fw-bold">Provisório SPOC César 910168138</td>
+                                <td colspan="2" class="text-warning fw-bold">Provisório César 910168138</td>
                             </tr>
                             <tr>
                                 <td>Alcácer / St André</td>
