--- a/index.htm
+++ b/index.htm
@@ -72,6 +72,8 @@
                         <ul class="dropdown-menu" aria-labelledby="buttonAlarmesGroup">
                             <li><a href="#" class="ALARMES dropdown-item"> Afetação dispersa. </a></li>
                             <li><a href="#" class="ALARMES dropdown-item"> Em análise. </a></li>
+                            <li><a href="#" class="ALARMES dropdown-item"> SNR dentro dos parâmetros. </a></li>
+
                         </ul>
                     </div>
                 </div>
